WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172414
-Wreturn-type warning triggered by WKNotification.cpp:77
https://bugs.webkit.org/show_bug.cgi?id=172414
Summary
-Wreturn-type warning triggered by WKNotification.cpp:77
Michael Catanzaro
Reported
2017-05-20 08:30:10 PDT
Fix -Wreturn-type warning triggered by WKNotification.cpp:77: [4626/5527] Building CXX object Source...r/UIProcess/API/C/WKNotification.cpp.o ../../Source/WebKit2/UIProcess/API/C/WKNotification.cpp: In function ‘const OpaqueWKString* WKNotificationCopyDir(WKNotificationRef)’: ../../Source/WebKit2/UIProcess/API/C/WKNotification.cpp:77:1: warning: control reaches end of non-void function [-Wreturn-type] } ^
Attachments
Patch
(1.36 KB, patch)
2017-05-20 08:32 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-05-20 08:32:01 PDT
Created
attachment 310771
[details]
Patch
Sam Weinig
Comment 2
2017-05-20 11:58:36 PDT
Comment on
attachment 310771
[details]
Patch My bad.
WebKit Commit Bot
Comment 3
2017-05-20 12:25:57 PDT
Comment on
attachment 310771
[details]
Patch Clearing flags on attachment: 310771 Committed
r217189
: <
http://trac.webkit.org/changeset/217189
>
WebKit Commit Bot
Comment 4
2017-05-20 12:25:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug