-Wreturn-type warning triggered by WKNotification.cpp:77 https://bugs.webkit.org/show_bug.cgi?id=172414

Reviewed by Sam Weinig.

* UIProcess/API/C/WKNotification.cpp:
(WKNotificationCopyDir):


Canonical link: https://commits.webkit.org/189316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217189 268f45cc-cd09-0410-ab3c-d52691b4dbfc